[package]
name = "include_wgsl"
license = "MIT"
description = "A tiny proc macro to include a WGSL file in your binary, and verify that it is valid at compile time."
repository = "https://github.com/ashpil/include_wgsl"
version = "1.0.0"
authors = ["ashpil <ashpil@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.69"

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
tag = "gfx-23"
features = ["wgsl-in"]

[lib]
proc-macro = true
