[package]
name = "include_wgsl"
license = "MIT"
description = "A tiny proc macro to include a WGSL file in your binary, and verify that it is valid at compile time."
repository = "https://github.com/ashpil/include_wgsl"
version = "1.1.0"
authors = ["ashpil <ashpil@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
naga = { version = "0.7", features = ["wgsl-in", "validate"] }

[features]
spv-out = ["naga/spv-out"]

[lib]
proc-macro = true
